# neighborcafe

./: README.md  sonar-project.properties
.github/workflows/: build.yml
neighbor_cafe/: README.md  pubspec.yaml
neighbor_cafe/android/app/: build.gradle
neighbor_cafe/test/: widget_test.dart
neighborcafe/: .gitignore  README.md  dotenv.gradle  firebase.json  pubspec.yaml
neighborcafe/android/app/: build.gradle  google-services.json
neighborcafe/ios/Runner/: Info.plist
neighborcafe/ios/Runner.xcodeproj/: project.pbxproj
neighborcafe/lib/: main.dart
neighborcafe/lib/src/: app.dart
neighborcafe/lib/src/components/: bottom_navigation_bar.dart  exit_confirmation.dart  main_wrapper.dart  review_dialog.dart  rounded_button.dart  rounded_text.dart
neighborcafe/lib/src/services/: auth_guard.dart  auth_service.dart  auth_wrapper.dart  protected_route.dart  routes.dart  (+1 more)
neighborcafe/linux/: CMakeLists.txt  my_application.cc
neighborcafe/macos/Runner.xcodeproj/: project.pbxproj
neighborcafe/web/: index.html  manifest.json
neighborcafe/windows/: CMakeLists.txt
neighborcafe/windows/runner/: Runner.rc  main.cpp
neighborcafe_app/: .gitignore  pubspec.yaml
neighborcafe_app/assets/: cafes.json
neighborcafe_app/assets/certs/: cert.pem  key.pem
neighborcafe_app/lib/: firebase_options.dart
openai_api/: .gitignore  pyproject.toml  scraper.py
openai_api/openai_api/: main.py
openai_api/openai_api/api/: firebase_config.py  routes.py  token.py
openai_api/openai_api/model/: chat.py  prompt.py
web_scraper/: .env.example  web_scraper.py
(+44 files in other folders)
