[tool.poetry]
name = "openai-api"
version = "0.1.0"
description = ""
authors = ["Ricardo <ricky_olalquiaga@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain-openai = "^0.2.8"
langchain = "^0.3.7"
langchain-core = "^0.3.19"
python-dotenv = "^1.0.1"
fastapi = "^0.115.5"
uvicorn = "^0.32.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
main = 'openai_api.main:main'